<resources>
    <string name="app_name">Health App</string>
    <string name="face_book">FaceBook</string>
    <string name="email">Email</string>
    <string name="email_address">email address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="question1">When do you weak up?</string>
    <string name="question2">When do you go to sleep?</string>
    <string name="question3">What is your name?</string>
    <string name="type_your_name">Type your name...</string>
    <string name="lets_get_helth">Let\'s Get Helthy</string>
    <string name="next_meal">Your next meal is at</string>
    <string name="time">12:30 PM</string>
    <string name="meal_suggest">Meal Suggestions</string>
    <string name="do_you_know">Did you know?</string>

    <string-array name="go_sleep_items">
        <item>Select Range</item>
        <item>early</item>
        <item>late</item>
    </string-array>

    <string-array name="time_weakup_items">
        <item>Select Range</item>
        <item>Befor 12 P.M</item>
        <item>After 12 P.M</item>
    </string-array>


</resources>
