<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        style="?android:textAppearanceLarge"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:background="#e0e0e0"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/time_weakup_items">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        style="?android:textAppearanceLarge"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:spinnerMode="dialog"
        android:background="#e0e0e0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/go_sleep_items">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        style="?android:textAppearanceLarge"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_name"
            android:layout_gravity="center"
            android:padding="16dp"
            android:maxLines="1"
            android:background="#e0e0e0"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:singleLine="true" >
        </EditText>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add"
        android:padding="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More Options"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_get_helth"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="16dp"/>

</LinearLayout>
