<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next_meal"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textSize="45sp"/>

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:src="@drawable/shaps"
        android:background="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="16dp"
        android:text="@string/meal_suggest" />
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_know"
        android:padding="16dp"
        android:textAllCaps="false"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/qustuin2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAllCaps="false"
            android:text="I'm Hungry"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Just Ate"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>



</LinearLayout>